--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,1 +1,3 @@
 1) FARE GLI ERRORI NEL README.md
+2) AGGIUNGERE L'IMPOSTAZIONE "LOAD BACKUP" CHE RISCRIVE IL FILE USERS_PASSWORDS CON L'ULTIMO BACKUP
+3) COMPLETARE L'OPZIONE BACKUP PASSWORD
